--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -10,43 +10,40 @@
     {% block css %}
     {% endblock %}
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0.2rem;
-            padding: 0;
+        header{
             display: flex;
-            flex-direction: column;
+            align-items: center;
             justify-content: space-between;
-            align-content: center;
-            max-width: 100%;
-            box-sizing: border-box;
-            min-height: 100%;
+            padding: 0 20px;
+            background: #37109b;
+            color: #fff;
+            border-bottom: 2px solid #e60122;
         }
-
-        nav {
-            background-color: #333;
-            overflow: hidden;
-            max-width: 100%;
-            box-sizing: border-box;
-            padding-right: 10%;
+        header a img{
+            width: 150px;
+            height: auto;
+        }
+        header nav {
             display: flex;
-            flex-direction: row;
-            flex-wrap: nowrap;
-            justify-content: space-around;
+            align-items: center;
+            justify-content: space-around; 
+            flex-grow: 1;     
         }
-
-        nav a {
-            float: left;
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
+        header nav a{
+            color: #fff;
             text-decoration: none;
+            display: inline-block;
+            padding: 5px 10px;
+            transition: .3s;
+            border-radius: 10px;
+            margin-right: 10px;
         }
-
+        header nav a:hover{
+            background-color: #e60122;
+        }
         .dropdown {
-            float: right;
             overflow: hidden;
+            float: right;
         }
 
         .dropdown .dropbtn {
@@ -58,6 +55,11 @@
             background-color: inherit;
             font-family: inherit;
             margin: 0;
+            border-radius: 10px;
+        }
+
+        .dropdown:hover .dropbtn {
+            background-color: #e60122;
         }
 
         .dropdown-content {
@@ -67,6 +69,8 @@
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1;
+            left: auto;
+            right: 0;
         }
 
         .dropdown-content a {
@@ -83,15 +87,14 @@
         }
 
         .dropdown:hover .dropdown-content {
-            display: flex;
-            flex-direction: column;
+            display: block;
         }
         footer{
             position: fixed;
             bottom: 0;
             right: 0;
             margin: 0;
-            background-color: #333;
+            background-color: #37109b;
             min-width: 100%;
             color:white;
             display: flex;
@@ -99,29 +102,37 @@
             justify-content: space-around;
 
         }
+        footer a{
+            color: #fff;
+            text-decoration: none;
+            display: inline-block;
+            padding: 5px 10px;
+            transition: .3s;
+            border-radius: 10px;
+            margin-right: 10px;
+        }
     </style>
 
 </head>
 
-<header>
-
-    <nav>
-    <a href="#">Inicio</a>
-    <a href="#">Opción 1</a>
-    <a href="#">Opción 2</a>
-
-    <div class="dropdown">
-        <button class="dropbtn">Usuario</button>
-        <div class="dropdown-content">
-            <a href="#">Perfil</a>
-            <a href="#">Configuración</a>
-            <a href="#">Cerrar Sesión</a>
+    <header>
+        <a href="#"><img src="img/logo.jpg"></a>
+        <nav>
+            <a href="#">Opcion 1</a>
+            <a href="#">Opcion 2</a>
+            <a href="#">Opcion 3</a>
+        </nav>
+        <div class="dropdown">
+            <button class="dropbtn"> Usuario</button>
+            <div class="dropdown-content">
+                <a href="#">Perfil</a>
+                <a href="#">Configuracion</a>
+                <a href="#">Serrar sesion</a>
+            </div>
         </div>
-    </div>
-</nav>
+        
 
-
-</header>
+    </header>
 
 <body>
 
@@ -133,16 +144,16 @@
 <footer>
 
     <div>
-        <p>Términos y Condiciones</p>
+        <a href="#">Términos y Condiciones</a>
     </div>
 
     <div>
-        <p>Privacidad</p>
+        <a href="#">Privacidad</a>
     </div>
 
     <div>
 
-        <p>Enviar solicitud al administrador</p>
+        <a href="#">Enviar solicitud al administrador</a>
 
     </div>
 
