--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -10,8 +10,8 @@
     <div class="main">
 
         <h1>{{mensaje}}</h1>
+        <img src="img/logo.png" >
         <form action="/login" method="post">
-            <h1>Login</h1>
             <div class="input">
                 <input type="email" placeholder="Correo" name="email" required>
             </div>
