--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -89,6 +89,9 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
+        body{
+            background-color: #D2D2D2;
+        }
         footer{
             position: fixed;
             bottom: 0;
