--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 <style>
-    body{
+    .main{
         display: flex;
         align-items: center;
         justify-content: center;
