pruebas acomodo de dashboard para sambio de contraseña

--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -2,17 +2,24 @@
 
 {% block title %}Cambio de Contraseña{% endblock %}
 
-
-{% block body %}
 <style>
     .main{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-height: 100vh;
+        width: 400px;
+        background: transparent;
+        border: 2px solid rgba(255, 255, 255, .2);
+        backdrop-filter: blur(10px);
+        box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+        color: white;
+        border-radius: 10px;
+        padding: 30px 40px;
     }
-
+    .main p{
+        font-size: 30px;
+        text-align: center;
+    }
 </style>
+{% block body %}
+
 
 <div class="main">
 
