--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -90,6 +90,10 @@
             display: block;
         }
         body{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh; 
             background-color: #D2D2D2;
         }
         footer{
