pruebas de acomodo de dashboard para cambio de contraseña

--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -10,6 +10,9 @@
     {% block css %}
     {% endblock %}
     <style>
+        body{
+            background-color: #D2D2D2;
+        }
         header{
             display: flex;
             align-items: center;
