--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -4,6 +4,10 @@
 
 <style>
     .main{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 400;
         width: 400px;
         background: transparent;
         border: 2px solid rgba(255, 255, 255, .2);
@@ -16,6 +20,39 @@
     .main p{
         font-size: 30px;
         text-align: center;
+    }
+    .main .input{
+        width: 100%;
+        height: 50px;
+        margin: 30px 0;
+    }
+    .input input{
+        width: 100%;
+        height: 100%;
+        background: transparent;
+        border: none;
+        outline: none;
+        border-radius: 40px;
+        border: solid 2px rgba(255, 255, 255, .2);
+        font-size: 15px;
+        color: white;
+        padding: 20px 45px 20px 20px;   
+    }
+    .input input::placeholder{
+        color: black;
+    }
+    .main .btn{
+        width: 100%;
+        height: 45px;
+        background: white;
+        border: none;
+        azimuth: none;
+        border-radius: 40px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+        cursor: pointer;
+        font-size: 15px;
+        color: #333;
+        font-weight: 600px;
     }
 </style>
 {% block body %}
