--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -119,8 +119,6 @@
 
 </head>
 
-
-<body class="{% block body_classes %}{% ednblock %}">
     <header>
         <a href="#"><img src="img/logo.jpg"></a>
         <nav>
@@ -136,30 +134,32 @@
                 <a href="#">Serrar sesion</a>
             </div>
         </div>
+        
+
     </header>
 
+<body>
 
 {% block body %}
 {% endblock %}
 
-
-    <footer>
-
-        <div>
-            <a href="#">Términos y Condiciones</a>
-        </div>
-
-        <div>
-            <a href="#">Privacidad</a>
-        </div>
-
-        <div>
-
-            <a href="#">Enviar solicitud al administrador</a>
-
-        </div>
-
-    </footer>
 </body>
 
+<footer>
+
+    <div>
+        <a href="#">Términos y Condiciones</a>
+    </div>
+
+    <div>
+        <a href="#">Privacidad</a>
+    </div>
+
+    <div>
+
+        <a href="#">Enviar solicitud al administrador</a>
+
+    </div>
+
+</footer>
 </html>
