prueba de {% block body_class%} en dashboard y layout

--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -1,8 +1,8 @@
 {% extends 'layout.html' %}
 
 {% block title %}Cambio de Contraseña{% endblock %}
-
-{% block body %}
+{% block body_class %}cambio_contra{% endblock %}
+{% block content %}
 
 
 <div class="main">
