--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -138,9 +138,9 @@
 
     </header>
 
-<body>
+<body class="{% block body_class %}{% endblock %}">
 
-{% block body %}
+{% block content %}
 {% endblock %}
 
 </body>
