--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -2,6 +2,18 @@
 
 {% block title %}Cambio de Contraseña{% endblock %}
 {% block body_class %}cambio_contra{% endblock %}
+
+<style>
+    body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: url(../img/escuela.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+</style>
 {% block content %}
 
 
