--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -8,7 +8,52 @@
         justify-content: center;
         min-height: 100vh;
         }
-    </style>
+        .main{
+        width: 400px;
+        background: transparent;
+        border: 2px solid rgba(255, 255, 255, .2);
+        box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+        color: white;
+        border-radius: 10px;
+        padding: 30px 40px;
+        }
+        .main .input{
+            width: 100%;
+            height: 50px;
+            margin: 30px 0;
+        }
+        .input input{
+            width: 100%;
+            height: 100%;
+            background: peachpuff;
+            border: none;
+            outline: none;
+            border-radius: 40px;
+            border: solid 2px rgba(255, 255, 255, .2);
+            font-size: 15px;
+            color: black;
+            padding: 20px 45px 20px 20px;   
+        }
+        .input input::placeholder{
+            color: red;
+        }
+        .main .Confirmar{
+            width: 100%;
+            height: 45px;
+            background: white;
+            border: none;
+            azimuth: none;
+            border-radius: 40px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+            cursor: pointer;
+            font-size: 15px;
+            color: #333;
+            font-weight: 600px;
+        }
+        .main .Confirmar:hover{
+            background-color: gold;
+        }
+   </style>
 {% block body_class %}cambio_contra{% endblock %}
 
 
