prueba css cambio de contraseña

--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block title %}Cambio de Contraseña{% endblock %}
+{% block css %}
     <style>
         body{
         display: flex;
@@ -54,6 +55,8 @@
             background-color: gold;
         }
    </style>
+{% endblock %}
+
 {% block body_class %}cambio_contra{% endblock %}
 
 
