prueba css cambio de contraseña

--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -10,9 +10,6 @@
     {% block css %}
     {% endblock %}
     <style>
-        body{
-            background-color: #D2D2D2;
-        }
         header{
             display: flex;
             align-items: center;
@@ -92,7 +89,13 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
-        
+        body{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;    
+            background-color: #D2D2D2;
+        }
         footer{
             position: fixed;
             bottom: 0;
