prueba css cambio de contraseña

--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -4,13 +4,18 @@
 {% block css %}
     <style>
         .main{
-        width: 400px;
-        background: transparent;
-        border: 2px solid rgba(255, 255, 255, .2);
-        box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-        color: white;
-        border-radius: 10px;
-        padding: 30px 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;    
+            background-color: #D2D2D2;
+            width: 400px;
+            background: transparent;
+            border: 2px solid rgba(255, 255, 255, .2);
+            box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+            color: white;
+            border-radius: 10px;
+            padding: 30px 40px;
         }
         .main .input{
             width: 100%;
