--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -5,6 +5,7 @@
     <style>
         .main{
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             min-height: 100vh;    
