--- a/mysite/templates/css/style.css
+++ b/mysite/templates/css/style.css
@@ -8,6 +8,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: 'Montserrat', sans-serif;
     min-height: 100vh;
     background: url(../img/escuela.jpg) no-repeat;
     background-size: cover;
@@ -46,7 +47,7 @@ body{
     border: solid 2px rgba(255, 255, 255, .2);
     font-size: 15px;
     color: white;
-    padding: 20px 45px 20px 20px;   
+    padding: 20px 45px 20px 20px;
 }
 
 .input input::placeholder{
