--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -20,8 +20,8 @@
         }
         .main .input{
             width: 100%;
-            height: 50px;
-            margin: 30px 0;
+            height: 30px;
+            margin: 25px;
         }
         .input input{
             width: 80%;
@@ -38,7 +38,8 @@
         }
         .main .Confirmar{
             width: 80%;
-            height: 45px;
+            height: 50px;
+            margin-top: 15px;
             background: white;
             border: none;
             border-radius: 40px;
