--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -123,7 +123,7 @@
                 <a href="#">Opcion 3</a>
             </nav>
             <div class="dropdown">
-                <button class="dropbtn"> Usuario</button>
+                <button class="dropbtn"> {{user.nombres}}</button>
                 <div class="dropdown-content">
                     <a href="#">Perfil</a>
                     <a href="#">Configuracion</a>
