se modifica layout para que al precionar el logo lleve a home

--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -121,7 +121,7 @@
     </head>
     <body class="{% block body_class %}{% endblock %}">
         <header>
-            <a href="homeDocente.html"><img src="img/logo.jpg"></a>
+            <a href="homeDocente"><img src="img/logo.jpg"></a>
             <nav>
                 <a href="#">Opcion 1</a>
                 <a href="#">Opcion 2</a>
