Se modifica el header

--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -13,6 +13,10 @@
     {% block css %}
     {% endblock %}
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
         header{
             display: flex;
             align-items: center;
