--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -4,17 +4,13 @@
 {% block css %}
     <style>
         .main{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             font-family:'Montserrat';
             margin: auto;
-            margin-top: 0;
+            margin-top: 100px;
             width: 400px;
             border: 2px solid rgba(255, 255, 255, .2);
             box-shadow: 0 0 10px rgba(0, 0, 0, .2);
