--- a/mysite/templates/homeDocente.html
+++ b/mysite/templates/homeDocente.html
@@ -6,11 +6,9 @@
 <style>
 
     .parent {
-        display: grid;
-        grid-template-columns: repeat(7, 1fr);
-        grid-template-rows: repeat(7, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
+        display: flex;
+        align-items:center;
+        justify-content:center;
     }
 
     .box1 {
