--- a/mysite/templates/homeDocente.html
+++ b/mysite/templates/homeDocente.html
@@ -7,8 +7,9 @@
 
     .parent {
         display: flex;
-        align-items:center;
-        justify-content:center;
+        align-items: center;
+        justify-content: space-around;
+        flex-wrap: wrap;
     }
 
     .box1 {
