--- a/mysite/templates/homeDocente.html
+++ b/mysite/templates/homeDocente.html
@@ -4,7 +4,9 @@
 
 {% block css %}
 <style>
-
+*{
+    font-family:'Montserrat';
+}
     .parent {
         display: flex;
         align-items: center;
