--- a/mysite/templates/homeDocente.html
+++ b/mysite/templates/homeDocente.html
@@ -35,7 +35,8 @@
         flex-direction: column;
     }
     .box:hover{
-        background-color: rgb(100, 1110, 187);
+        background-color: rgb(114 123 147);
+        color:white;
     }
 </style>
 {% endblock %}
