--- a/mysite/templates/homeDocente.html
+++ b/mysite/templates/homeDocente.html
@@ -12,6 +12,7 @@
         align-items: center;
         justify-content: space-around;
         flex-wrap: wrap;
+        margin-top:10rem;
     }
 
     .box {
