--- a/mysite/templates/homeDocente.html
+++ b/mysite/templates/homeDocente.html
@@ -34,6 +34,7 @@
         justify-content: center;
         flex-wrap: nowrap;
         flex-direction: column;
+        transition: .3s;
     }
     .box:hover{
         background-color: rgb(114 123 147);
