se agrega transition de .3s en layout y dashboard

--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -47,6 +47,7 @@
             cursor: pointer;
             font-size: 15px;
             color: #333;
+            transition: .3s;
         }
         .main .Confirmar:hover{
             background-color: gold;
