--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -46,6 +46,7 @@
             transition: .3s;
             border-radius: 10px;
             margin-right: 10px;
+            transition: .3s;
         }
         header nav a:hover{
             background-color: #e60122;
