acomodo de style en dashboard

--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -25,7 +25,7 @@
         }
         .input input{
             width: 80%;
-            background: peachpuff;
+            background: rgb(240, 218, 189);
             outline: none;
             border-radius: 40px;
             border: solid 2px rgba(255, 255, 255, .2);
@@ -34,12 +34,13 @@
             padding: 20px 45px 20px 20px;
         }
         .input input::placeholder{
-            color: red;
+            color: rgb(63, 39, 4);
         }
         .main .Confirmar{
             width: 95%;
             height: 50px;
-            margin-top: 15px;
+            margin-top: 25px;
+            margin-bottom: 10px;
             background: white;
             border: none;
             border-radius: 40px;
