Cambio de color en .confir de dashboard

--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -51,7 +51,8 @@
             transition: .3s;
         }
         .main .Confirmar:hover{
-            background-color: gold;
+            background-color: #37109b;
+            color: white;
         }
         .main h1{
             font-size: 35px;
