--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -99,6 +99,9 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
+        body{
+            background-color: #d4eff3;
+        }
         footer{
             position: fixed;
             bottom: 0;
