--- a/mysite/templates/dashboard.html
+++ b/mysite/templates/dashboard.html
@@ -17,6 +17,7 @@
             color: white;
             border-radius: 10px;
             padding: 30px 40px;
+            background-color: white;
         }
         .main .input{
             width: 100%;
