cambio en layout, se modifican las opciones

--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -22,8 +22,8 @@
                 <input type="password" placeholder="Contraseña" name="password" required>
             </div>
             <button class="btn" type="submit">Iniciar</button>
-            <div class="link-de-registro">
-                <p>No tiene una cuenta? <a href="#">Registrarse</a></p>
+            <div class="recuperar">
+                <p>Olvidaste tu contraseña?<a href="#">Recuperarla</a></p>
             </div>
         </form>
     </div>
