--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -131,15 +131,15 @@
         <header>
             <a href="homeDocente"><img src="img/logo.jpg"></a>
             <nav>
-                <a href="#">Opcion 1</a>
-                <a href="#">Opcion 2</a>
-                <a href="#">Opcion 3</a>
+                <a href="homeDocente">Vista Docente</a>
+                <a href="#">Vista Jefe de carrera</a>
+                <a href="#">Vista Administrador</a>
             </nav>
             <div class="dropdown">
                 <button class="dropbtn"> {{user.nombres}}</button>
                 <div class="dropdown-content">
                     <a href="#">Perfil</a>
-                    <a href="#">Configuracion</a>
+                    <a href="/dashboard">Cambiar contraseña</a>
                     <a href="/logout">Cerrar sesión</a>
                 </div>
             </div>
