--- a/mysite/templates/css/style.css
+++ b/mysite/templates/css/style.css
@@ -68,7 +68,9 @@ body{
     font-weight: 600px;
 }
 .main .btn:hover{
-    background-color: gold;
+    background-color: transparent;
+    background-color: rgba(78, 46, 129, 0.568);
+    color: white;
 }
 .main .recuperar{
     font-size: 14px;
